bug: wide image is too big

--- a/css/blogpost.css
+++ b/css/blogpost.css
@@ -1,8 +1,9 @@
 .content-box {
+    padding-top: 3em;
     display: grid;
-    height: 100vh;
     grid-template-columns: 1fr 150px;
     grid-template-rows: 5em 50px var(--favourites-height) 1fr 2em;
+    grid-gap: 1em;
 }
 
 .header {
@@ -23,7 +24,17 @@
 
 .sidebar {
     grid-row: 3;
-    grid-column: 2/3;
+    grid-column: 2/-1;
+}
+
+.content {
+    grid-row: 3;
+    grid-column: 1/2;
+    justify-self: stretch;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    width: 95%;
 }
 
 #avatar {
@@ -40,13 +51,16 @@
     width: 20px;
 }
 
-.content {
-    grid-row: 3;
-    grid-column: 1/2;
+.some-images {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
 }
 
-#post__first-pavement {
-    width: 100%;
-    height: 12em;
+#wide-picture {
     object-fit: cover;
+    width: 100%;
+    max-width: 100%;
+    height: 12em;
 }
