--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,10 @@
     margin: 0 auto;
 }
 
+body {
+
+}
+
 header {
     grid-area: gd-header;
 }
